# Backtest-Engine-in-progress

./: .gitignore  README.md  data.db  lasso_model.pkl  pyproject.toml  requirements.txt  run.ipynb
data/: ^IXIC.csv  ^RUT.csv  ^SPX.csv
parquet/base/: us_cpi.parquet  us_market_open_date.parquet  us_sector_info.parquet  us_sector_weight.parquet  us_sedol_ticker_mapping.parquet
parquet/cape/: us_cpi.parquet  us_cpi_yoy.parquet  us_eps_quarterly.parquet  us_security_eps_annually.parquet  us_security_income_report_announcement_date.parquet
parquet/dividend_yield/: us_security_dividend_yield_fy1_monthly.parquet  us_security_dividend_yield_ntm_monthly.parquet
parquet/roe/: us_security_roe_fy1_monthly.parquet  us_security_roe_monthly.parquet
parquet/sales_growth/: us_sales_growth_fy1.parquet  us_sales_growth_ntm.parquet  us_sales_growth_ttm.parquet
parquet/ticker/: ENFR.parquet  IDU.parquet  IYC.parquet  IYE.parquet  IYF.parquet  IYH.parquet  IYJ.parquet  IYK.parquet  IYM.parquet  IYR.parquet  IYW.parquet  IYZ.parquet  RSPC.parquet  RSPD.parquet  RSPF.parquet  RSPG.parquet  RSPH.parquet  RSPM.parquet  RSPN.parquet  RSPR.parquet  RSPS.parquet  RSPT.parquet  RSPU.parquet  VNQ.parquet  XLB.parquet  XLE.parquet  XLF.parquet  XLI.parquet  XLK.parquet  XLP.parquet  XLU.parquet  XLV.parquet  XLY.parquet  XTL.parquet  ^SPX.parquet  ^SPXEW.parquet
src/: analysis.py  backtest.py  benchmark.py  data_loader.py  database.py  factor.py  fund_universe.py  market.py  metric.py  portfolio.py  rebalance.py  run.ipynb  run.py  security_symbol.py  strategy.py
src/analysis/: metric.py  (+3 more)
(+26 files in other folders)
