[tool.poetry]
name = "sector-rotation"
version = "0.1.0"
description = "us fund sector rotation"
authors = ["Yifei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.18"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
yfinance = "^0.2.37"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
duckdb = "^0.10.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
